--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>
                     <a href="moana.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/Intro.PNG" alt="" /></a>
                     <!--<hr>-->
-                    <a href="moana.html"> <br> Moana: Rhythm Run <br> Disney Interactive and Cocodrilo Dog Games <br> C# - Unity</a>
+                    <a href="moana.html"> <br> Moana: Rhythm Run <br> Disney Interactive and Cocodrilo Dog Games (Co-Production) <br> C# - Unity</a>
                 </p>
                 <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
                 <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
@@ -111,8 +111,7 @@
             <div class="col-lg-8 col-lg-offset-2 centered">
                 <a href="webgames.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/HTML5-Games/mainGif400x300.gif" alt="" /></a>
                 <p>
-                    <a href="webgames.html" target="_blank">+50 web games for the arbolabc.com games portal.</a>
-                    <a href="webgames.html"> <br> HTML5 - Javascript </a>
+                    <a href="webgames.html" target="_blank">+50 web games for the arbolabc.com games portal. <br> Rainbow Tree Inc <br> HTML5 - Javascript </</a>
                 </p>
             </div>
         </div>
@@ -142,7 +141,7 @@
             <div class="col-lg-6">
                 <div class="col-sm-pull-0">
                     <a href="beatboy.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/BEAT BOY/AnimationSystemOP400x300.gif" alt="" /></a>
-                    <a href="beatboy.html"><br> BEAT BOY  <br> COMPANY: Cocodrilo Dog Games <br> ROLE: Game Developer <br>TECH: Unity, C# <br> (Consoles & Mobile)</a>
+                    <a href="beatboy.html"><br> BEAT BOY <br> Cocodrilo Dog Games <br> Unity, C#</a>
                 </div>
                 <br>
             </div>
@@ -150,7 +149,7 @@
             <div class="col-lg-6">
                 <div class="col-sm-pull-0">
                     <a href="placco.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/PLACCO/PLACCO-AI400x300.gif" alt="" /></a>
-                    <a href="placco.html"><br> PLACCO <br> COMPANY: Universidad Nacional de Colombia <br> ROLES: Game Designer, Game Developer, Student Research Assistant <br>TECH: Unity, C#, PHP, SQL <br> (PC & Mobile) </a>
+                    <a href="placco.html"><br> PLACCO <br> Universidad Nacional de Colombia <br> Unity, C#, PHP, SQL </a>
                 </div>
                 <br>
             </div>
