--- a/moana.html
+++ b/moana.html
@@ -91,7 +91,7 @@
         <div class="row mt">
             <div class="col-lg-8 col-lg-offset-2 centered">
                 <h3>Moana: Rhythm Run<br>
-                    <a href="http://www.disney.com/" target="_blank">Disney Interactive</a> and <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a></h3>
+                    <a href="http://www.disney.com/" target="_blank">Disney Interactive</a> and <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a><br>(Co-Production)*</h3>
                 <hr>
                 <p>
                     <a href="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" alt="" /></a>
@@ -131,17 +131,24 @@
                         <a target="" href=""><img src="assets/img/amazon-pending.png" alt="" class="img-icon" /></a>
                     </ul>
 
-                    <h4>  Cool Stuff - Challenges - Things I learned to do</h4>
+                    <h4> Things I worked on*: </h4>
+
+                    *Disclaimer: The list mentioned below is just a representation of the stuff I worked on, there's a lot of hard work behind
+                    that is not mentioned in here due that I did not helped/worked on that, for example the main musical core recognized by
+                    the MIT - Technology Review is attributed to <a href="https://co.linkedin.com/in/juan-pablo-reyes-lega-95807960" target="_blank">Juan Pablo Reyes Lega (Co-Founder / CCO / Lead Developer at Cocodrilo Dog Games).</a>                    
+                    For more information about that and more stuff not mentioned here please contact him.<br><br>
 
                     <ul>
-                        <li>Programmed most of the Main Characters and Enemies behaviors based on a MVC architecture.</li>
+                        <li>Extended a core functionality to some of the Main Characters and Enemies behaviors based on a MVC architecture created by the lead developer.</li>
                         <li>Worked on multiple UIs' functionalities: Main Menu, Scrollable Map and Loading Scenes.</li>
-                        <li>Programmed a modular system to create random-loopable levels, giving the players a unique experience each time they play.</li>
+                        <li>Programmed a modular system to create random-loopable levels, giving the players a unique experience each time they played, based on a previous code of the lead developer.</li>
                         <li>Integrated different kind of assets (Sprites, 3D Models, Textures, UI modules...), even, used Photoshop to cut, trim and export assets.</li>
-                        <li>Optimized each one of the images/textures to reduce app's size, fulfilling our client's needs.</li>
-                        <li>Debug and Develop on top of a previous base code created by <a href="https://co.linkedin.com/in/juan-pablo-reyes-lega-95807960" target="_blank">another programmer.</a></li>
-                        <li>Worked on some UI and objects' animations inside Unity.</li>
+                        <li>Optimized most of the images/textures to reduce the app's size.</li>
+                        <li>Worked on some UI animations inside Unity.</li>
                     </ul>
+
+                    *Disclaimer 2: I did not worked directly for Disney Interactive, I was a game developer at Cocodrilo Dog Games.<br>    
+                                    
                 </div>
             </div>
     </div>
