--- a/moana.html
+++ b/moana.html
@@ -144,7 +144,7 @@
                         <li>Programmed a modular system to create random-loopable levels, giving the players a unique experience each time they played, based on a previous code of the lead developer.</li>
                         <li>Integrated different kind of assets (Sprites, 3D Models, Textures, UI modules...), even, used Photoshop to cut, trim and export assets.</li>
                         <li>Optimized most of the images/textures to reduce the app's size.</li>
-                        <li>Worked on some UI animations inside Unity.</li>
+                        <li>Worked on some UI animations using the Unity Animation Editor.</li>
                     </ul>
 
                     *Disclaimer 2: I did not worked directly for Disney Interactive, I was a game developer at Cocodrilo Dog Games.<br>    
