--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                         <li>Worked on some UI animations using the Unity Animation Editor.</li>
                     </ul>
 
+                    <a href="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" target="_blank">This title was featured by Apple.</a><br>
                         * based on code developed by the <a href="https://co.linkedin.com/in/juan-pablo-reyes-lega-95807960" target="_blank">Lead Programmer (LinkedIn).</a>
                     <br>
 
@@ -135,7 +136,7 @@
             <div class="table-bordered">
                 <div style="margin-left:10px">
                     <h3 style="text-align:center">
-                        +50 web games for the <a href="https://www.arbolabc.com" target="_blank">arbolabc.com</a> games portal.<br>
+                        50+ web games for the <a href="https://www.arbolabc.com" target="_blank">arbolabc.com</a> games portal.<br>
                     </h3>
                     <hr />
                     <h4 style="text-align:center">
@@ -341,7 +342,7 @@
 
                     <ul>
                         <li><a href="http://link.springer.com/chapter/10.1007/978-3-319-19033-4_29">Research and Paper publication (Springer).</a></li>
-                        <li>Used PHP and MySQL to setup a database connectivity inside the game</li>
+                        <li>Wrote PHP scripts and SQL queries to setup a database connectivity inside the game.</li>
                         <li>Developed an <a href="assets/img/ProfessionalProjects/PLACCO/PLACCO-Chat.gif" target="_blank">In-game Chat (image).</a>
                         </li>
                         <li>Programmed the <a href="assets/img/ProfessionalProjects/PLACCO/PLACCO-Login.gif" target="_blank">Login and Signup modules (image).</a>
@@ -352,7 +353,7 @@
                     </ul>
 
                     <br><b>TOOLS:</b><br>
-                    Unity, C#, PHP, MySQL<br><br>
+                    Unity, C#, PHP, SQL/PLSQL<br><br>
                 </div>
             </div>
 
