--- a/about.html
+++ b/about.html
@@ -91,18 +91,20 @@
                     <img src="assets/img/Others/profile/sa_small.png" alt="">
                     <h1>Hi. I'm Santiago.</h1>
                     <p>
-                        I'm currently working as a game developer at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote).
-                        I have previously worked in the same role at <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
-                        I own a Bachelor degree on Systems Engineering from the <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
+                        I'm currently working as a game developer at <a href="http://www.timba.co/" target="_blank">Timba Games</a> (Full Time - Onsite).
+                        I have previously worked in the same role at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote) and
+                        <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
+                        I earned a Bachelor degree on Systems Engineering from the <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
                     </p>
+                <!--
                     <p>
-                        I dedicated (and I'm still doing) a lot of time to play games since I was a small kid,
-                        due to that my family had some sort of Arcade full with different kind of consoles where people
-                        could pay to play some hours, so one thing took to the other and I ended being the most active "client".
+                        I dedicated (and still do) a lot of time to play games since I was a small kid;
+                        my family used to have some sort of Arcade full with different kind of consoles where people
+                        could pay to play some hours, so one thing took to the other and I ended up being the most active "client".
                     </p>
                     <p>
                         Then, when I was almost finishing school, I was starting to think what I wanted to do with my life
-                        and one day I bought Warcraft III from Blizzard and when the firsts cinematics shown up on my screen
+                        and one day I bought Warcraft III from Blizzard and when the firsts cinematics showed up on my screen
                         I was totally fascinated, so once again, one thing took to another:
                         I ended up deciding that Video Games were my thing.
                     </p>
@@ -110,14 +112,12 @@
                         I started attending at the University to study Systems Engineering because I thought it was a good way to learn
                         to program and create games, but none of the courses were about making games (as expected),
                         so I ended up, not getting home to rest after class, but instead,
-                        to learn how to create games, this became one of my major skills: I'm Autodidact.
+                        to learn how to create games; this became one of my major skills: I'm Autodidact.
                     </p>
+                     -->
                     <p>
-                        Years later, I managed to get a job on the game industry through Cocodrilo Dog Games, learn how to
-                        work with artists and programmers hand by hand to develop great products.
-                        Even if I enjoy a lot doing games, you can also find me doing other stuff like:
-
-
+                        Apart from making games you can also find me doing other stuff like:
+                    </p>
                     <p>
                         <b>Learning</b><br>
                         I'm always reading and searching for stuff, any kind of stuff, from video game development through dark matter and even how to construct a potato clock.
@@ -137,18 +137,15 @@
 
                     <p>
                         <b>Helping to grow the local industry</b><br>
-                        I use to be one of the guys making possible the development of InterAction, a forum of game development opened to all the community in the local industry of videogames in Medellín.
+                        I helped with the foundation and rising of "InterAction", a forum of game development opened to all the community in the local industry of videogames in Medellín.
                         <br>You can join us at the <a href="http://www.meetup.com/Desarrollo-de-Videojuegos-en-Medellin/">InterAction Meetup Page</a> or in our <a href="https://www.facebook.com/groups/InterActionforo">Facebook Group</a>
                     </p>
 
                     <p>
                         <b>Travelling</b><br>
-                        I like to read, but I also like to experience, live and know new places, cultures, people and everything that can teach more about the world and the people living in it, after all we are making games for them, isn't it?
+                        I like to read, but I also like to experience, live and know new places, cultures, people and everything that can teach me more about the world and the people living in it, after all we are making games for them, isn't it?
                     </p>
                     <br>
-                
-
-                    - Please let me know if you find any typo -
                 </div><!-- /col-lg-8 -->
             </div><!-- /row -->
         </div> <!-- /container -->
