--- a/about.html
+++ b/about.html
@@ -116,36 +116,19 @@
                     </p>
                      -->
                     <p>
-                        Apart from making games you can also find me doing other stuff like:
-                    </p>
-                    <p>
-                        <b>Learning</b><br>
+                        I enjoy a lot doing and playing games, is my passion, however I also enjoy doing a lot of other stuff, like learning,
                         I'm always reading and searching for stuff, any kind of stuff, from video game development through dark matter and even how to construct a potato clock.
-                        The more you know, the more you can create.
-                    </p>
-
-                    <p>
-                        <b>Playing Piano and Drawing</b><br>
-                        Music and Art are the best ways I have found to keep being creative.
-                    </p>
-
-                    <p>
-                        <b>Teaching</b><br>
-                        I use to teach at the Universidad Nacional,
-                        specifically in Game Design and Development in Unity.
-                    </p>
-
-                    <p>
-                        <b>Helping to grow the local industry</b><br>
-                        I helped with the foundation and rising of "InterAction", a forum of game development opened to all the community in the local industry of videogames in Medellín.
+                        The more you know, the more you can create.<br><br>
+                        I also strongly believe that creativeness is the spark for anything I ever wished to do, that's why I like to spend some time drawing and playing the piano.
+                        <br><br>
+                        But not only I enjoy learning, I also believe in helping others, that's why I used to teach at the Universidad Nacional,
+                        specifically in Game Design and Development in Unity.<br>
+                        Also, I helped with the foundation and rising of "InterAction", a forum of game development (Now an oficial Unity User Group) opened to all the community in the local industry of videogames in Medellín.
                         <br>You can join us at the <a href="http://www.meetup.com/Desarrollo-de-Videojuegos-en-Medellin/">InterAction Meetup Page</a> or in our <a href="https://www.facebook.com/groups/InterActionforo">Facebook Group</a>
+                        <br><br>
+                        Finally, but not least, I also like to experience, live and know new places, cultures, people and everything that can teach me more about the world and the people living in it, after all we are making games for them, isn't it?
                     </p>
-
-                    <p>
-                        <b>Travelling</b><br>
-                        I like to read, but I also like to experience, live and know new places, cultures, people and everything that can teach me more about the world and the people living in it, after all we are making games for them, isn't it?
-                    </p>
-                    <br>
+                    
                 </div><!-- /col-lg-8 -->
             </div><!-- /row -->
         </div> <!-- /container -->
