Platform fix on web games

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </h5>
 
                     <ul>
-                        <li>Developed games for HTML5, Android and iOS platforms, using the Phaser library and Game Maker Studio.</li>
+                        <li>Developed games for Web, Android and iOS platforms, using the Phaser library and Game Maker Studio.</li>
                         <li> Developed different in-house tools to reduce workflow time.</li>
                         <li> Contributed to allow a Multi-Resolution compatibility between different devices and browsers.</li>
                         <li> Evaluate new technologies and summarized the ones that works better for the games and apps to be developed.</li>
