Personal Work - Added SFML Animation Port Project

--- a/personalwork.html
+++ b/personalwork.html
@@ -111,8 +111,18 @@
         <div class="row mt centered">
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
+                    <a href="https://github.com/tiag/C-SFML-html5-animation" target="_blank">
+                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/SFMLThumbnail400x300.PNG" alt="" />
+                        <br> Sample code from "Foundation HTML5 Animation with JavaScript" ported to C++ and SFML <br> TOOLS: C++, SFML
+                    </a>
+                </div>
+                <br>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="col-sm-pull-0">
                     <a href="https://github.com/tiag/CodingGame_Puzzles" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/codinggameThumbnail400x300.PNG" alt="" />
-                    <br> CODINGAME.COM PUZZLES (ACTIVE) <br> AREA: Algorithms <br>TECH: C++ </a>
+                    <br> CODINGAME.COM PUZZLES (ACTIVE) <br> AREA: Algorithms <br> TOOLS: C++ </a>
                 </div>
                 <br>
             </div>
@@ -120,29 +130,30 @@
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
                     <a href="https://github.com/tiag/Unity-TechnicalTest-CocodriloDogGames" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/technicalTestThumbnail400x300.PNG" alt="" />
-                    <br> TECHNICAL TEST - COCODRILO DOG GAMES (COMPLETED - 2015) <br> AREA: Game Dev <br>TECH: Unity, C#, Unity Editor Tools </a>
+                    <br> TECHNICAL TEST - COCODRILO DOG GAMES (COMPLETED - 2015) <br> TOOLS: Unity, C#, Unity Editor Tools </a>
                 </div>
                 <br>
             </div>
 
-            <div class="col-lg-4">
-                <div class="col-sm-pull-0">
-                    <a href="http://link.springer.com/chapter/10.1007/978-3-319-19033-4_29" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/springerThumbnail400x300.PNG" alt="" />
-                    <br> SPRINGER PUBLICATION (COMPLETED - 2015)<br> AREA: Research - Educative  </a> <br> <a  href="/index.html" > RELATED PROJECT: PLACCO</a>
-            </div>
-                <br>
-            </div>
-
-          
         </div><!-- /row -->
 
         <div class="row mt centered">
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
+                    <a href="http://link.springer.com/chapter/10.1007/978-3-319-19033-4_29" target="_blank">
+                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/springerThumbnail400x300.PNG" alt="" />
+                        <br> SPRINGER PUBLICATION (COMPLETED - 2015)<br> ROLE: Student Research Assistant, Writter and Speaker
+                    </a> <br> <a href="/index.html"> RELATED PROJECT: PLACCO</a>
+                </div>
+                <br>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="col-sm-pull-0">
                     <a href="#" id="image-gallery-button" type="button">
                         <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/3DStudios(2014)/thumbnail400x300.jpg" alt="" />
-                        <br> 3D STUDY MODELS (COMPLETED - 2014) <br> AREA: 3D <br>TECH: MAYA
+                        <br> 3D STUDY MODELS (COMPLETED - 2014) <br> AREA: 3D <br> TOOLS: MAYA
                     </a>
                 </div>
                 <br>
@@ -153,30 +164,31 @@
                 <div class="col-sm-pull-0">
                     <a href="https://youtu.be/tD5qk-tyj-0" target="_blank">
                         <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/facePlusThumbnail400x300.PNG" alt="" />
-                        <br> FACEPLUS - FACIAL MOTION CAPTURE  (COMPLETED - 2014) <br> AREA: Motion Capture <br> TECH: Unity, Mixamo-FacePlus
+                        <br> FACEPLUS - FACIAL MOTION CAPTURE  (COMPLETED - 2014) <br> AREA: Motion Capture <br> TOOLS: Unity, Mixamo-FacePlus
                     </a>
                 </div>
                 <br>
             </div>
 
-            <div class="col-lg-4">
-                <div class="col-sm-pull-0">
-                    <a href="https://youtu.be/7b0HIN8DEsI?t=46s" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/spacePirateThumbnail400x300.PNG" alt="" />
-                    <br> SPACE PIRATE  (DEMO COMPLETED - 2014) <br> AREA: Game Dev  <br> TECH: Unity, C# <br> (Diplomado Certificate)</a>
-                </div>
-                <br>
-            </div>
-
-            
         </div><!-- /row -->
 
         <div class="row mt centered">  
 
         <div class="col-lg-4">
+            <div class="col-sm-pull-0">
+                <a href="https://youtu.be/7b0HIN8DEsI?t=46s" target="_blank">
+                    <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/spacePirateThumbnail400x300.PNG" alt="" />
+                    <br> SPACE PIRATE  (DEMO COMPLETED - 2014) <br> ROLE: Gameplay and UI Programmer  <br> TOOLS: Unity, C# <br> (Diplomado Certificate)
+                </a>
+            </div>
+            <br>
+        </div>
+
+        <div class="col-lg-4">
                 <div class="col-sm-pull-0">
                     <a href="https://youtu.be/7b0HIN8DEsI?t=1m45s" target="_blank">
                         <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/InkRunnerThumbnail400x300.PNG" alt="" />
-                        <br> INK RUNNER  (DEMO COMPLETED - 2014) <br> AREA: Game Dev  <br> TECH: Unity, C# <br> (Diplomado Certificate)
+                        <br> INK RUNNER  (DEMO COMPLETED - 2014) <br> ROLE: Gameplay and UI Programmer <br> TOOLS: Unity, C# <br> (Diplomado Certificate)
                     </a>
                 </div>
                 <br>
@@ -185,7 +197,7 @@
          <div class="col-lg-4">
                 <div class="col-sm-pull-0">
                     <a href="https://www.microsoft.com/es-es/store/games/colors-palette/9wzdncrdp2zd" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/colorPalleteThumbnail400x300.PNG" alt="" />
-                    <br> COLORS PALETTE (COMPLETED - 2014) <br> AREA: Game Dev <br> TECH: Unity, C# <br> (Windows Phone App Publication - Microsoft Certificate)</a>
+                    <br> COLORS PALETTE (COMPLETED - 2014) <br> ROLE: Solo Programmer and Artist <br> TOOLS: Unity, C#, GIMP <br> (Windows Phone App Publication - Microsoft Certificate)</a>
                 </div>
                 <br>
          </div>
