Particle Systems - Portfolio

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="container">
                 <h2> SANTIAGO ALVAREZ</h2>
-                <h4> Game Developer - Software Engineer</h4>
+                <h4 class="top"> Game Developer - Software Engineer</h4>
             </div>
             <div class="container">
                 <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
@@ -94,7 +94,7 @@
                         I'm currently working as a game developer at <a href="http://www.timba.co/" target="_blank">Timba Games</a> (Full Time - Onsite).
                         I have previously worked in the same role at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote) and
                         <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
-                        I earned a Bachelor degree on Systems Engineering from the <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
+                        I earned a Bachelor Degree on Systems Engineering at <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
                     </p>
                 <!--
                     <p>
@@ -142,6 +142,8 @@
                     <h4>My Current Kingdom</h4>
                     <p>
                         Medellín, Colombia.
+                        <br />
+                        <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
                     </p>
                 </div><!-- /col-lg-4 -->
 
@@ -168,7 +170,6 @@
                 <div class="col-lg-4">
                     <h4>About this web page</h4>
                     <p>I'm using bootstrap and the theme STANLEY with some of my own touch</p>
-                    Last Update: 18-November-2016
                 </div><!-- /col-lg-4 -->
 
             </div>
