--- a/personalwork.html
+++ b/personalwork.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="container">
                 <h2> SANTIAGO ALVAREZ</h2>
-                <h4> Game Developer - Software Engineer</h4>
+                <h4 class="top"> Game Developer - Software Engineer</h4>
             </div>
             <div class="container">
                 <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
@@ -151,14 +151,27 @@
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
-                    <a href="#" id="image-gallery-button" type="button">
+                    <a name="3D" href="#" id="image-gallery-button" type="button">
                         <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/3DStudios(2014)/thumbnail400x300.jpg" alt="" />
-                        <br> 3D STUDY MODELS (COMPLETED - 2014) <br> AREA: 3D <br> TOOLS: MAYA
+                        <br> GALLERY - 3D STUDY MODELS (COMPLETED - 2014) <br> AREA: 3D <br> TOOLS: MAYA
                     </a>
                 </div>
                 <br>
             </div>
 
+            <div class="col-lg-4">
+                <div class="col-sm-pull-0">
+                    <a href="https://www.youtube.com/playlist?list=PLW7OiBAzq5Mzn4Qjx9tcPwSceC21RHEq6" target="_blank">
+                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/particleSystemsThumbnail400x300.PNG" alt="" />
+                        <br> PARTICLE SYSTEMS - DEMO REEL <br> AREA: PARTICLE SYSTEMS <br> TOOLS: Unity, Unity Editor
+                    </a>
+                </div>
+                <br>
+            </div>
+
+        </div><!-- /row -->
+
+        <div class="row mt centered">  
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
@@ -170,37 +183,39 @@
                 <br>
             </div>
 
-        </div><!-- /row -->
-
-        <div class="row mt centered">  
-
-        <div class="col-lg-4">
-            <div class="col-sm-pull-0">
-                <a href="https://youtu.be/7b0HIN8DEsI?t=46s" target="_blank">
-                    <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/spacePirateThumbnail400x300.PNG" alt="" />
-                    <br> SPACE PIRATE  (DEMO COMPLETED - 2014) <br> ROLE: Gameplay and UI Programmer  <br> TOOLS: Unity, C# <br> (Diplomado Certificate)
-                </a>
-            </div>
-            <br>
-        </div>
-
-        <div class="col-lg-4">
+            <div class="col-lg-4">
                 <div class="col-sm-pull-0">
-                    <a href="https://youtu.be/7b0HIN8DEsI?t=1m45s" target="_blank">
-                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/InkRunnerThumbnail400x300.PNG" alt="" />
-                        <br> INK RUNNER  (DEMO COMPLETED - 2014) <br> ROLE: Gameplay and UI Programmer <br> TOOLS: Unity, C# <br> (Diplomado Certificate)
+                    <a href="https://youtu.be/7b0HIN8DEsI?t=46s" target="_blank">
+                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/spacePirateThumbnail400x300.PNG" alt="" />
+                        <br> SPACE PIRATE  (DEMO COMPLETED - 2014) <br> ROLE: Gameplay and UI Programmer  <br> TOOLS: Unity, C# <br> (Diplomado Certificate)
                     </a>
                 </div>
                 <br>
             </div>
-                    
-         <div class="col-lg-4">
+
+            <div class="col-lg-4">
+                    <div class="col-sm-pull-0">
+                        <a href="https://youtu.be/7b0HIN8DEsI?t=1m45s" target="_blank">
+                            <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/InkRunnerThumbnail400x300.PNG" alt="" />
+                            <br> INK RUNNER  (DEMO COMPLETED - 2014) <br> ROLE: Gameplay and UI Programmer <br> TOOLS: Unity, C# <br> (Diplomado Certificate)
+                        </a>
+                    </div>
+                    <br>
+            </div>
+
+        </div><!-- /row -->
+
+        <div class="row mt centered">
+
+            <div class="col-lg-4">
                 <div class="col-sm-pull-0">
-                    <a href="https://www.microsoft.com/es-es/store/games/colors-palette/9wzdncrdp2zd" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/colorPalleteThumbnail400x300.PNG" alt="" />
-                    <br> COLORS PALETTE (COMPLETED - 2014) <br> ROLE: Solo Programmer and Artist <br> TOOLS: Unity, C#, GIMP <br> (Windows Phone App Publication - Microsoft Certificate)</a>
+                    <a href="https://www.microsoft.com/es-es/store/games/colors-palette/9wzdncrdp2zd" target="_blank">
+                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/colorPalleteThumbnail400x300.PNG" alt="" />
+                        <br> COLORS PALETTE (COMPLETED - 2014) <br> ROLE: Solo Programmer and Artist <br> TOOLS: Unity, C#, GIMP <br> (Windows Phone App Publication - Microsoft Certificate)
+                    </a>
                 </div>
                 <br>
-         </div>
+            </div>
 
         </div><!-- /row -->
 
@@ -268,6 +283,7 @@
             <img src="assets/img/PersonalProjects/3DStudios(2014)/01sideView.jpg" alt="Dragon - Side View" hidden="hidden">
         </a>
     </div>
+
     <!-- +++++ Footer Section +++++ -->
 
     <div id="footer">
@@ -307,7 +323,6 @@
                 <div class="col-lg-4">
                     <h4>About this web page</h4>
                     <p>I'm using bootstrap and the theme STANLEY with some of my own touch</p>
-                    Last Update: 18-November-2016
                 </div><!-- /col-lg-4 -->
 
             </div>
