--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="container">
                 <h2> SANTIAGO ALVAREZ</h2>
-                <h4> Game Developer - Software Engineer</h4>
+                <h4 class="top"> Game Developer - Software Engineer</h4>
             </div>
             <div class="container">
                 <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
@@ -143,7 +143,6 @@
                 <div class="col-lg-4">
                     <h4>About this web page</h4>
                     <p>I'm using bootstrap and the theme STANLEY with some of my own touch</p>
-                    Last Update: 18-November-2016
                 </div><!-- /col-lg-4 -->
 
             </div>
