--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     </h5>
 
                     <ul>
-                        <li>Extended a core functionality to some of the Main Characters' and Enemies' behaviors.*</li>
+                        <li>Extended a core functionality to some of the Main Characters' and Enemies' behaviors.</li>
                         <li>Worked on multiple UIs' functionalities: Main Menu, Scrollable Map and Loading Scenes.</li>
-                        <li>Programmed a modular system to create random-loopable levels.*</li>
+                        <li>Extended a modular system to create random-loopable levels.</li>
                         <li>Integrated different kind of assets (Sprites, 3D Models, Textures, UI modules...).</li>
                         <li>Used Photoshop to cut, trim and export some assets.</li>
                         <li>Optimized most of the images/textures to reduce the app's size.</li>
@@ -117,7 +117,7 @@
                     </ul>
 
                     <a href="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" target="_blank">This title was featured by Apple.</a><br>
-                        * based on code developed by the <a href="https://co.linkedin.com/in/juan-pablo-reyes-lega-95807960" target="_blank">Lead Programmer (LinkedIn).</a>
+                    
                     <br>
 
                     <br><b>TOOLS:</b><br>
