--- a/personalwork.html
+++ b/personalwork.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
                 <br />
-                <a href="http://github.com/tiag" target="_blank">
+                <a href="http://github.com/pulpobot" target="_blank">
                     <img title="GitHub" src="assets/img/Others/social/github-light.png"
                          onmouseover="this.src = 'assets/img/Others/social/github-color.png'"
                          onmouseout="this.src = 'assets/img/Others/social/github-light.png'"
@@ -111,7 +111,7 @@
         <div class="row mt centered">
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
-                    <a href="https://github.com/tiag/C-SFML-html5-animation" target="_blank">
+                    <a href="https://github.com/pulpobot/C-SFML-html5-animation" target="_blank">
                         <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/SFMLThumbnail400x300.PNG" alt="" />
                         <br> Sample code from "Foundation HTML5 Animation with JavaScript" ported to C++ and SFML <br> TOOLS: C++, SFML
                     </a>
@@ -121,7 +121,7 @@
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
-                    <a href="https://github.com/tiag/CodingGame_Puzzles" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/codinggameThumbnail400x300.PNG" alt="" />
+                    <a href="https://github.com/pulpobot/CodingGame_Puzzles" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/codinggameThumbnail400x300.PNG" alt="" />
                     <br> CODINGAME.COM PUZZLES (ACTIVE) <br> AREA: Algorithms <br> TOOLS: C++ </a>
                 </div>
                 <br>
@@ -129,7 +129,7 @@
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
-                    <a href="https://github.com/tiag/Unity-TechnicalTest-CocodriloDogGames" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/technicalTestThumbnail400x300.PNG" alt="" />
+                    <a href="https://github.com/pulpobot/Unity-TechnicalTest-CocodriloDogGames" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/technicalTestThumbnail400x300.PNG" alt="" />
                     <br> TECHNICAL TEST - COCODRILO DOG GAMES (COMPLETED - 2015) <br> TOOLS: Unity, C#, Unity Editor Tools </a>
                 </div>
                 <br>
@@ -304,7 +304,7 @@
                     <h4>My Links</h4>
                     <p>
 
-                        <a href="http://github.com/tiag" target="_blank">
+                        <a href="http://github.com/pulpobot" target="_blank">
                             <img title="GitHub" src="assets/img/Others/social/github-light.png"
                                  onmouseover="this.src = 'assets/img/Others/social/github-color.png'"
                                  onmouseout="this.src = 'assets/img/Others/social/github-light.png'"
