--- a/beatboy.html
+++ b/beatboy.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
                 <br />
-                <a href="http://github.com/tiag" target="_blank">
+                <a href="http://github.com/pulpobot" target="_blank">
                     <img title="GitHub" src="assets/img/Others/social/github-light.png"
                          onmouseover="this.src = 'assets/img/Others/social/github-color.png'"
                          onmouseout="this.src = 'assets/img/Others/social/github-light.png'"
@@ -214,7 +214,7 @@
                     <h4>My Links</h4>
                     <p>
 
-                        <a href="http://github.com/tiag" target="_blank">
+                        <a href="http://github.com/pulpobot" target="_blank">
                             <img title="GitHub" src="assets/img/Others/social/github-light.png"
                                  onmouseover="this.src = 'assets/img/Others/social/github-color.png'"
                                  onmouseout="this.src = 'assets/img/Others/social/github-light.png'"
