Added Puppet Kings & made some changes on the layout

--- a/about.html
+++ b/about.html
@@ -96,37 +96,18 @@
                         <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
                         I earned a Bachelor Degree on Systems Engineering at <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
                     </p>
-                <!--
                     <p>
-                        I dedicated (and still do) a lot of time to play games since I was a small kid;
-                        my family used to have some sort of Arcade full with different kind of consoles where people
-                        could pay to play some hours, so one thing took to the other and I ended up being the most active "client".
-                    </p>
-                    <p>
-                        Then, when I was almost finishing school, I was starting to think what I wanted to do with my life
-                        and one day I bought Warcraft III from Blizzard and when the firsts cinematics showed up on my screen
-                        I was totally fascinated, so once again, one thing took to another:
-                        I ended up deciding that Video Games were my thing.
-                    </p>
-                    <p>
-                        I started attending at the University to study Systems Engineering because I thought it was a good way to learn
-                        to program and create games, but none of the courses were about making games (as expected),
-                        so I ended up, not getting home to rest after class, but instead,
-                        to learn how to create games; this became one of my major skills: I'm Autodidact.
-                    </p>
-                     -->
-                    <p>
-                        I enjoy a lot doing and playing games, is my passion, however I also enjoy doing a lot of other stuff, like learning,
+                        I enjoy a lot doing and playing games, is my passion, however, I also enjoy doing a lot of other stuff, like learning,
                         I'm always reading and searching for stuff, any kind of stuff, from video game development through dark matter and even how to construct a potato clock.
                         The more you know, the more you can create.<br><br>
-                        I also strongly believe that creativeness is the spark for anything I ever wished to do, that's why I like to spend some time drawing and playing the piano.
+                        I also strongly believe that creativeness is the spark for anything I ever wished to do, that's why I like to spend some time taking photographs and playing the piano.
                         <br><br>
                         But not only I enjoy learning, I also believe in helping others, that's why I used to teach at the Universidad Nacional,
                         specifically in Game Design and Development in Unity.<br>
-                        Also, I helped with the foundation and rising of "InterAction", a forum of game development (Now an oficial Unity User Group) opened to all the community in the local industry of videogames in Medellín.
+                        Also, I helped with the foundation and rising of "InterAction", a forum of game development (Now an official Unity User Group) opened to all the community in the local industry of video games in Medellín.
                         <br>You can join us at the <a href="http://www.meetup.com/Desarrollo-de-Videojuegos-en-Medellin/">InterAction Meetup Page</a> or in our <a href="https://www.facebook.com/groups/InterActionforo">Facebook Group</a>
                         <br><br>
-                        Finally, but not least, I also like to experience, live and know new places, cultures, people and everything that can teach me more about the world and the people living in it, after all we are making games for them, isn't it?
+                        Finally, but not least, I also like to experience, live and know new places, cultures, people and everything that can teach me more about the world and the people living in it, after all, we are making games for them, isn't it?
                     </p>
                     
                 </div><!-- /col-lg-8 -->
