Updated Resume with PuppetKings date

--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
             <div class="row">
                 <div style="margin-left:10px">
                     <div class="col-lg-6 centered">
-                        <img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/PuppetKings.PNG" alt="" />
+                        <a target="_blank" href="http://store.steampowered.com/app/756020/Puppet_Kings/"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/PuppetKings.PNG" alt="" /></a>
                         <br>
                         <br>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=PUzsCK9wKD4"><img src="assets/img/youtube-1718976_640.png" alt="" class="img-responsive img-icon" /></a>
+                        <!--<a target="_blank" href="https://www.youtube.com/watch?v=PUzsCK9wKD4"><img src="assets/img/youtube-1718976_640.png" alt="" class="img-responsive img-icon" /></a>-->
+                        <a target="_blank" href="http://store.steampowered.com/app/756020/Puppet_Kings/"><img src="assets/img/share_steam_logo.png" alt="" class="img-responsive img-icon" /></a>
                     </div>
                     <div class="col-lg-6 left">
                         <h3 style="text-align:center">
@@ -119,7 +120,7 @@
                 <div style="margin-left:10px">
                     <div class="col-lg-6 centered">
                         <br>
-                        <img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/Intro.PNG" alt="" />
+                        <a target="_blank" href="https://itunes.apple.com/app/id1141983956"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/Intro.PNG" alt="" /></a>
                         <br>
                         <br>
                         <a target="_blank" href="https://itunes.apple.com/app/id1141983956"><img src="assets/img/app-store.png" alt="" class="img-responsive img-icon" /></a>
