--- a/personalwork.html
+++ b/personalwork.html
@@ -112,7 +112,7 @@
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
                     <a href="https://github.com/pulpobot/C-SFML-html5-animation" target="_blank">
-                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/SFMLThumbnail400x300.PNG" alt="" />
+                        <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/SFMLThumbnail400x400.gif" alt="" />
                         <br> Sample code from "Foundation HTML5 Animation with JavaScript" ported to C++ and SFML <br> TOOLS: C++, SFML
                     </a>
                 </div>
