--- a/personalwork.html
+++ b/personalwork.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="container">
                 <h2> SANTIAGO ALVAREZ</h2>
-                <h4 class="top"> Game Developer - Software Engineer</h4>
+                <h4 class="top"> Game Programmer - Software Engineer</h4>
             </div>
             <div class="container">
                 <a class="navbar-email" href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
