--- a/placco.html
+++ b/placco.html
@@ -55,7 +55,7 @@
                          onmouseout="this.src = 'assets/img/Others/social/github-light.png'"
                          alt="" />
                 </a>
-                <a href="http://www.linkedin.com/in/saalvarezva" target="_blank">
+                <a href="http://www.linkedin.com/in/pulpobot" target="_blank">
                     <img title="LinkedIn" src="assets/img/Others/social/linkedin-light.png"
                          onmouseover="this.src = 'assets/img/Others/social/linkedin-color.png'"
                          onmouseout="this.src = 'assets/img/Others/social/linkedin-light.png'"
